# 32D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Stollen.coffee  World.coffee  config.coffee  package.json  pull-submodules.sh  simulator.coffee  terminal.coffee  test.coffee  test_aggresive_fsm.coffee  test_fsm.coffee  test_sdl.coffee  utils.cmake
AIs/: aggresive_fsm.coffee  basic_fsm.coffee  random.coffee
coffee/: package.json
coffee/AIs/: basic_fsm.coffee
coffee/stollen/: Stollen.coffee  terminal.coffee
img/: README.md  sprites.xcf
src/: ai.c  ai.h  dwarf.c  dwarf.h  main.c  resources.c  resources.h  sfsm_ai.c  stollen.c  stollen.h  test_raylib.c  test_tty.c  types.h
stollen/: Stollen.coffee  config.coffee  utils.coffee
